[gd_scene load_steps=5 format=3 uid="uid://cre8hki0xv04h"]

[ext_resource type="Script" path="res://scripts/game/objects/rocket.gd" id="1_xjebm"]
[ext_resource type="Texture2D" uid="uid://bdtwvor11qmux" path="res://resources/texture/misc/rocket.png" id="2_ktysa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ujdif"]
atlas = ExtResource("2_ktysa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5gfw"]
size = Vector2(256, 256)

[node name="Rocket" type="Node2D"]
script = ExtResource("1_xjebm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = SubResource("AtlasTexture_ujdif")

[node name="ReachableRegion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReachableRegion"]
shape = SubResource("RectangleShape2D_t5gfw")

[connection signal="body_entered" from="ReachableRegion" to="." method="_on_reachable_region_body_entered"]
[connection signal="body_exited" from="ReachableRegion" to="." method="_on_reachable_region_body_exited"]
